Se han aplicado patrones al ejercicio.
Los patrones añadidos han sido: Abstract Factory, Facade, Template
Method, Command, Builder, Singleton, Composite y Visitor.